[package]
name = "rtl-sdr-rs"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "RTL-SDR USB software defined radio library"
repository = "https://github.com/ccostes/rtl-sdr-rs"
readme = "readme.md"
keywords = ["rtl-sdr", "sdr", "radio"]
exclude = ["capture.bin"]

[features]
default = []
rtl_sdr_blog = []
disable-simd = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9"
byteorder = "1"
log = "0.4"
mockall = "0.11"

[dev-dependencies]
rusb = "0.9"
byteorder = "1"
ctrlc = "3.2.3"
num-complex = "0.4"
stderrlog = "0.5"
criterion = "0.5.1"
